another dataframe manipulation

--- a/WalmartAnalysis.ipynb
+++ b/WalmartAnalysis.ipynb
@@ -97,8 +97,8 @@
     }
    ],
    "source": [
-    "walmart_pd = pd.read_csv(file_to_load, encoding=\"utf-8\")\n",
-    "walmart_pd.head()"
+    "walmart_df = pd.read_csv(file_to_load, encoding=\"utf-8\")\n",
+    "walmart_df.head()"
    ]
   },
   {
@@ -292,16 +292,324 @@
     }
    ],
    "source": [
-    "income_pd = pd.read_csv(file_to_load1, encoding=\"utf-8\")\n",
-    "income_pd.head()"
+    "income_df = pd.read_csv(file_to_load1, encoding=\"utf-8\")\n",
+    "income_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "walmart_df['Store Name'] = walmart_df['Store Name'].str.replace(' - Walmart.com','')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#walmart_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_walmart_df = walmart_df[\"Store Name\"].str.split(\",\", n = 1, expand = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Walmart Supercenter</td>\n",
+       "      <td>2901 Highway 412 E, Siloam Springs, AR 72761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Walmart Supercenter</td>\n",
+       "      <td>1621 North Business 9, Morrilton, AR 72110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Walmart Supercenter</td>\n",
+       "      <td>1155 Hwy 65 North, Conway, AR 72032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Walmart Supercenter</td>\n",
+       "      <td>9053 Highway 107, Sherwood, AR 72120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Walmart Supercenter</td>\n",
+       "      <td>30983 Highway 441 S, Commerce, GA 30529</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     0                                              1\n",
+       "0  Walmart Supercenter   2901 Highway 412 E, Siloam Springs, AR 72761\n",
+       "1  Walmart Supercenter     1621 North Business 9, Morrilton, AR 72110\n",
+       "2  Walmart Supercenter            1155 Hwy 65 North, Conway, AR 72032\n",
+       "3  Walmart Supercenter           9053 Highway 107, Sherwood, AR 72120\n",
+       "4  Walmart Supercenter        30983 Highway 441 S, Commerce, GA 30529"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_walmart_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "new_walmart_df[\"Store_type\"]= new_walmart_df[0] \n",
+    "new_walmart_df[\"Address\"]= new_walmart_df[1] \n",
+    "\n",
+    "new_walmart_df= new_walmart_df[['Store_type','Address']]\n",
+    "#new_walmart_df(columns =[0, 1], inplace = True) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#new_walmart_df.Address.str.extract(\"regex_pattern\", expand=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_walmart1_df = new_walmart_df[\"Address\"].str.split(\",\", n = 2, expand = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2901 Highway 412 E</td>\n",
+       "      <td>Siloam Springs</td>\n",
+       "      <td>AR 72761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1621 North Business 9</td>\n",
+       "      <td>Morrilton</td>\n",
+       "      <td>AR 72110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1155 Hwy 65 North</td>\n",
+       "      <td>Conway</td>\n",
+       "      <td>AR 72032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9053 Highway 107</td>\n",
+       "      <td>Sherwood</td>\n",
+       "      <td>AR 72120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>30983 Highway 441 S</td>\n",
+       "      <td>Commerce</td>\n",
+       "      <td>GA 30529</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        0                1          2\n",
+       "0      2901 Highway 412 E   Siloam Springs   AR 72761\n",
+       "1   1621 North Business 9        Morrilton   AR 72110\n",
+       "2       1155 Hwy 65 North           Conway   AR 72032\n",
+       "3        9053 Highway 107         Sherwood   AR 72120\n",
+       "4     30983 Highway 441 S         Commerce   GA 30529"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_walmart1_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_walmart1_df[\"Street\"]= new_walmart1_df[0] \n",
+    "new_walmart1_df[\"City\"]= new_walmart1_df[1] \n",
+    "new_walmart1_df[\"Rest\"]= new_walmart1_df[2] \n",
+    "\n",
+    "new_walmart1_df= new_walmart1_df[['Street','City','Rest']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_walmart1_df = new_walmart1_df[\"Rest\"].str.split(\"  \", n = 0, expand = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AR 72761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AR 72110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AR 72032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AR 72120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GA 30529</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           0\n",
+       "0   AR 72761\n",
+       "1   AR 72110\n",
+       "2   AR 72032\n",
+       "3   AR 72120\n",
+       "4   GA 30529"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_walmart1_df.head()"
+   ]
   }
  ],
  "metadata": {
